Fix spacing of links in navbar

--- a/source/main.css
+++ b/source/main.css
@@ -1,5 +1,4 @@
 @import "/source/fonts/font.css";
-
 :root[font-mode="default"] {
     --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
 }
@@ -62,6 +61,7 @@ body {
     height: 40px;
     box-shadow: 0px -5px 5px 5px darkgray;
     background-color: var(--topbar-background);
+    display: inline-table;
 }
 
 .topbar .topbar-right {
@@ -72,6 +72,7 @@ body {
     border-left: 2px solid var(--accent-color);
     height: 70%;
     margin-right: 5px;
+    margin-left: 5px;
 }
 
 .topbar-pfp {
